# stride-emission

./: .gitignore  Anchor.toml  PROGRESS.md  README.md  package-lock.json  package.json  tsconfig.json
programs/stride-emission/: Cargo.toml
programs/stride-emission/src/: lib.rs
scripts/: claim.ts  configure.ts  epoch_tick.ts  init.ts  pda.ts  read_balances.ts  read_state.ts  read_user.ts  stake_init.ts  stake_with_transfer.ts  unstake.ts
sdk/: package-lock.json  package.json  tsconfig.json
sdk/examples/: 01-read-smoke.js  02-e2e-sdk.js
sdk/scripts/: check-state.mjs
sdk/src/: builders.ts  config.ts  errors.ts  idl.ts  pdas.ts  readers.ts  types.ts
test-ledger/: faucet-keypair.json  genesis.tar.bz2  stake-account-keypair.json  validator-keypair.json  vote-account-keypair.json
test-ledger/rocksdb/: 000014.sst  000015.sst  000016.sst  000017.sst  000018.sst  000019.sst  IDENTITY  LOG  LOG.old.1755023638743597  MANIFEST-000021
tests/: stride-emission.ts
