[package]
name = "stride-emission"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl  = { version = "0.31.1", features = ["token", "associated_token"] }

[features]
no-entrypoint = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
cpi = ["no-entrypoint"]
default = ["idl-build"]
